--- a/React16/Take2/code-along/section5/src/Person/Person.css
+++ b/React16/Take2/code-along/section5/src/Person/Person.css
@@ -7,12 +7,9 @@
     text-align: center;
 }
 
-
-
-
-/* one way to write media queries below
+/* one way to write media queries below */
 @media (min-width: 500px) {
   .Person {
     width: 450px;
   }
-} */
+}
